# archive-youtube

./: .gitignore  GEMINI.md  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  web.py  youtube_archiver.py
config/: config.json
src/youtube_archiver/: __init__.py  app.py  cli.py  core.py
static/: script.js
templates/: add_playlist.html  base.html  index.html  playlist_detail.html  playlists.html  settings.html  videos.html  watch.html
tests/: test_archiver.py  test_web.py
