[project]
name = "youtube-archiver"
version = "0.1.0"
description = "YouTube Archiver with Flask"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "Flask==3.1.0",
    "humanize==4.12.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.5",
    "MarkupSafe==3.0.2",
    "schedule==1.2.2",
    "Werkzeug==3.1.3",
    "yt-dlp==2025.2.19",
]

[project.scripts]
youtube-archiver = "youtube_archiver.cli:main"
youtube-archiver-web = "youtube_archiver.app:main"

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"